--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -32,7 +32,9 @@
 
 			<!-- Sidebar Views -->
 			<div id="sidebarViews">
-				<div id="thumbnailView"></div>
+				<div id="thumbnailView">
+					<div id="thumbnailsContainer" role="tablist" aria-label="Thumbnail Tabs"></div>
+				</div>
 				<div id="outlineView"></div>
 				<div id="commentView"></div>
 				<div id="bookmarksView"></div>
