--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -112,6 +112,35 @@ body {
     font-size: 10px;
 }
 
+/*Thumbnails view*/
+.thumbnailContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 10px;
+	width: 270px;
+	background-color: transparent;
+}
+
+.pageNumberElement {
+	font-size: 14px;
+	color: #333;
+	padding-bottom: 15px;
+	padding-top: 5px;
+}
+
+.thumbnailContainer .thumbnailCanvas {
+	max-width: 100%;
+	height: auto;
+	border: 1px solid transparent;
+}
+
+.thumbnailContainer[aria-selected="true"] .thumbnailCanvas {
+	max-width: 100%;
+	height: auto;
+	border: 5px solid #ACCEF7;
+}
+
 
 /*
 
