--- a/static/css/viewer.css
+++ b/static/css/viewer.css
@@ -80,26 +80,39 @@ body {
     position: absolute;
     inset: 32px 0 0 0;
     overflow:auto;
+	text-align: center;
+	background: #6c757d;
 }
 
 /* Buttons, Fields, Labels, Selects */
-.toolbarButton, .toolbarField, .toolbarLabel, #documentTitle, #fileName, .toolbarSelect {
-    height: 28px;
-    margin: 2px;
+.toolbarButton {
+	height: 28px;
+	width: 28px;
+	font-size: 12px;
+	margin: 2px;
 }
 
-.toolbarButton, .toolbarField, .toolbarSelect {
-    width: 28px;
+.toolbarField {
+	height: 28px;
+	width: 32px;
+	text-align: center;
+	font-size: 16px;
+	padding: 4px 7px;
+	margin: 2px;
 }
 
-.toolbarField, #fileName, .toolbarSelect {
-    width: 32px;
+.toolbarLabel {
+	display: flex;
+	align-items: center;
+	margin: 2px;
+	font-size: 16px;
+	user-select: none;
 }
 
-.toolbarLabel, #documentTitle {
-    display: flex;
-    align-items: center;
-    user-select: none;
+.toolbarSelect {
+	height: 28px;
+	font-size: 16px;
+	margin: 2px;
 }
 
 #documentTitle {
