--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -105,6 +105,7 @@
 		</div>
 	</div>
 
+	<!-- Hanson Version
 	<script type="module">
 		import * as pdfjsLib from 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.min.mjs';
 	
@@ -289,8 +290,8 @@
 
 
 	</script>
+	-->
 
-	<!--
 	<script type="module">
 		import * as pdfjsLib from 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.min.mjs';
 
@@ -301,7 +302,7 @@
 		const canvas = document.getElementById("pdf");
 		const context = canvas.getContext("2d");
 
-		var scale = 1.5;
+		var scale = 1;
 		const outputScale = window.devicePixelRatio || 1;
 		const pageSpacing = 0; // Adjust spacing between pages here
 
@@ -332,13 +333,25 @@
 				maxWidth = Math.max(maxWidth, pageWidth);
 			}
 
-			canvas.width = viewer.clientWidth;
-			canvas.height = totalHeight;
+			/*
+			canvas.width = maxWidth * scale;
+			canvas.height = totalHeight * scale;
 			canvas.style.width = canvas.width + "px";
 			canvas.style.height = canvas.height + "px";
+			*/
 
+			renderDocument(pdf); // Render pages once dimensions have been set 
+
+
+			// Add event listener to zoom option
+			var selectScale = document.getElementById("selectScale");
+				selectScale.addEventListener("change", function() {
+					var selectedValue = parseFloat(selectScale.value); // Get the selected option value
+					zoomDocument(selectedValue, pdf);
+				});
+
+			/*
 			var checkDimensionsInterval = setInterval(function() {	
-				console.log("sdsd");		
 				if (viewer.offsetWidth != viewer.clientWidth) {
 					clearInterval(checkDimensionsInterval); // Clear the interval
 					renderDocument(pdf); // Render pages once dimensions have been set 
@@ -354,6 +367,7 @@
 					
 				}
 			}, 100); // Check every 100 milliseconds
+			*/
 
 
 		});
@@ -372,9 +386,7 @@
 
 		async function renderDocument (pdf)
 		{
-			canvas.width = viewer.clientWidth * (scale / 1.5);
-
-			//canvas.width = viewer.clientWidth;
+			canvas.width = maxWidth * scale;
 			canvas.height = totalHeight * scale;
 			canvas.style.width = canvas.width + "px";
 			canvas.style.height = canvas.height + "px";
@@ -383,15 +395,12 @@
 			for (let pageNumber = 1; pageNumber <= pdf.numPages; pageNumber++) {
 				const page = await pdf.getPage(pageNumber);
 				const viewport = page.getViewport({ scale });
-				
-				// Calculate the x-coordinate to center the page horizontally
-				const translateX = (canvas.width - viewport.width * outputScale)/ 2;
 	
 				// Calculate the y-coordinate for the page
 				const translateY = pageSpacing + (pageNumber - 1) * (viewport.height * outputScale + pageSpacing);
 	
-				// Translate the context to center the page horizontally, and render next page below this one
-				context.translate(translateX, translateY);
+				// Translate the context to render next page below this one
+				context.translate(0, translateY);
 	
 				// Render the page
 				await page.render({
@@ -419,7 +428,6 @@
 		}
 
 	</script>
--->	
 </body>
 </html>
 
